<resources>
    <string name="app_name">Love Is</string>
    <string name="registrationText">Регистрация</string>
    <string name="step">шаг</string>
    <string name="_1">1</string>
    <string name="of">из</string>
    <string name="_5">5</string>
    <string name="choose_gender">Выберите пол</string>
    <string name="next">Продолжить</string>
    <string name="_2">2</string>
    <string name="upload_photo">Загрузите фото</string>
    <string name="enter_name">Введите имя</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="birth_date">Дата рождения</string>
    <string name="bio">Немного о себе</string>
    <string name="male">М</string>
    <string name="female">Ж</string>
    <string name="wallet">Кошелек</string>
    <string name="videos">Видео для вас</string>
    <string name="tech_support">Техническая поддержка</string>
    <string name="change_phone">Изменить номер телефона</string>
    <string name="more_futures">Больше возможностей</string>
    <string name="about_app">О приложении</string>
    <string name="verify">Верифицировать</string>
    <string name="verify_desription1">Пройдите верификацию\nи станьте пользователем\nкоторому доверяют</string>
    <string name="verify_description2">Верифицированным\nпользователем</string>
    <string name="verify_description3">Ваши данные останутся\nскрыты от остальных</string>
    <string name="verify_description4">Мы действуем согласно</string>
    <string name="personal_info_politics">политике о персональных</string>
    <string name="verify_description5">информацию о вас</string>
    <string name="finish">Завершить</string>
    <string name="access">Принять</string>
    <string name="join_event_info">Для вступления в Event is\nвам необходимо оплатить\nвзнос администратору\nсобытия в размере</string>
    <string name="coins">монет</string>
    <string name="day_hint">ДД</string>
    <string name="month_hint">ММ</string>
    <string name="year_hint">ГГГГ</string>
    <string name="registration_text">Регистрация</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="accept_terms">Продолжая, вы принимаете условия</string>
    <string name="agreement">Соглашение об условиях использования приложения</string>

    <string name="enter_code">Введите код из смс</string>
    <string name="welcome">Добро\nпожаловать!</string>
    <string name="accept_rules">Пожалуйста соблюдайте\nследующие правила:</string>
    <string name="be_yourself">Будьте собой</string>
    <string name="info_must_be_real">Ваше фото, возраст и\nинформация о себе должны\nбыть настоящими</string>
    <string name="safety">Помните о безопасности!</string>
    <string name="do_not_hurry">Не торопитесь делиться своей личной инфомацией</string>
    <string name="makeSelfy">Пожалуйста сделайте селфи с паспортом</string>
    <string name="name">Имя</string>
    <string name="about_yourself">Немного о себе</string>
    <string name="save">Сохранить</string>
    <string name="active">Активные</string>
    <string name="my">Мои</string>
    <string name="new_loveis">Новые</string>
    <string name="history">История</string>
    <string name="walk">Прогулка</string>
    <string name="ski">Лыжи, сноуборды, коньки</string>
    <string name="trip">Поездка</string>
    <string name="sushi">Суши</string>
    <string name="cafe">Кафе</string>
    <string name="_6">6</string>
    <string name="choose_place">Выберите место</string>
    <string name="add_new_place">Добавить новое</string>
    <string name="choose_date_time">Укажите дату\nи время</string>
    <string name="create_loveis_eventis">Создать мероприятие</string>
    <string name="telegram_ref">Укажите ссылку на беседу\nв Telegram</string>
    <string name="whatsapp_ref">или\nWhatsApp</string>
    <string name="pay_and_send">Оплатить и отправить</string>
    <string name="pay_loveis_info">Для создания Love is\nвам необходимо оплатить\nвзнос в размере</string>
    <string name="get_loveis_cashback">Если ваш Love is\nсостоится, вы получите\nкэшбек в размере</string>
    <string name="refund_info">В случае если ваше Love is не состоится\nвам вернут ваши монеты</string>
    <string name="loveis_cashback_info">Если ваш Love is\nсостоится, вы получите\nкэшбек в размере</string>
    <string name="loveis_cashback_info2">С возможностью дальнейшего вывода на карту</string>

    <string name="remove">Исключить</string>
    <string name="pay_and_continue">Оплатить и продолжить</string>
    <string name="balance">Баланс</string>

    <string name="version">Версия 0.0.1</string>
    <string name="feedback">Обратная связь</string>
    <string name="rateApp">Оценить приложение</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="protection_of_info">Защита информации</string>
    <string name="using_terms">Соглашение об условии пользования</string>
    <string name="currentNumber">Ваш текущий номер телефона</string>
    <string name="phone_number">+7 (999)-999-99-99</string>
    <string name="enter_new_number">Введите новый номер</string>
    <string name="change_number">Изменить номер</string>
    <string name="enter_place_name">Укажите название места</string>
    <string name="create">Создать</string>
    <string name="success">Успех</string>
    <string name="network_error">Упс... Кажется\nподключение к интернету\nотсутствует</string>
    <string name="free_version">На данный момент вы используете\nбесплатную версию приложения</string>
    <string name="subscribe">Оформив подписку вы получите</string>
    <string name="more_events">Больше событий!</string>
    <string name="create_events">Создавайте события в неограниченных\nколичествах</string>
    <string name="use_filters">Пользуйтесь фильтрами!</string>
    <string name="sorting">Возможность сортировки событий и\nпользователей</string>
    <string name="top_search">Поднятие в Топ поиска!</string>
    <string name="top_search_text">Поднятие в топ, чтобы тебя увидело больше людей</string>
    <string name="month">месяц</string>
    <string name="_349">349 руб / мес</string>
    <string name="month2">месяца</string>
    <string name="_306">306 руб / мес</string>

    <string name="month3">месяцев</string>
    <string name="_266">266 руб / мес</string>
    <string name="_306_3">306 руб / месяц. Оплата раз в 3 месяца</string>
    <string name="not_verified">Пользователь\nне верефицирован</string>
    <string name="gender">Пол</string>
    <string name="age">Возраст</string>
    <string name="from">От</string>
    <string name="_18">18</string>
    <string name="until">до</string>
    <string name="_30">30</string>
    <string name="enter_requisites">Заполните реквизиты</string>
    <string name="card_number">Номер карты</string>
    <string name="card_holder">Имя владельца</string>
    <string name="expire_time">Срок\nдействия</string>
    <string name="cvc">CVC</string>
    <string name="_000">000</string>
    <string name="add_amount">Сумма пополнения</string>
    <string name="_300">300</string>
    <string name="currency_rate">Курс внутренней валюты</string>
    <string name="_1_1">1 монета = 1 рубль</string>
    <string name="add_money">Пополнить</string>
    <string name="wallet_add">Пополнить кошелек</string>
    <string name="on_phone_number">На номер телефона</string>
    <string name="sms_was_sent">Было отправлено СМС</string>
    <string name="expire_time2">Срок действия</string>
    <string name="get_amount">Сумма вывода</string>
    <string name="get_money">Вывести</string>
    <string name="agreement1">Отправляя фото вы даете согласие</string>
    <string name="agreement2">На обработку персональных данных</string>
    <string name="agreement3">И согласны</string>
    <string name="agreement4">Политикой кофиденциальности</string>
    <string name="send">Отправить</string>
    <string name="tell_your_problem">Опишите свою проблему и мы с вами свяжемся</string>
    <string name="_2_000">2 000</string>
    <string name="coin">монет</string>
    <string name="__________">__________</string>
    <string name="xxxxx">XXXXX</string>
    <string name="mmgg">ММГГ</string>
    <string name="enter_message">Введите текст сообщения</string>
    <string name="members_count">Количество мест</string>
    <string name="members_count_info">Колличество мест для Event is\nне может быть меньше 3х</string>
    <string name="all">Все</string>
    <string name="event_type">Вид мероприятия</string>
    <string name="good">Хорошо</string>
    <string name="loveis_success_info">Ваш Love is успешно\nсостоялся</string>
    <string name="subscription_restriction_info">К сожалению данная\nвозможность доступна\nтолько по подписке</string>

    <string name="success_operation_info">Ваше действие успешно\nзавершено</string>
    <string name="gps_permission_info">Для продолжения работы\nнеобходимо разрешение\nна доступ к GPS</string>
    <string name="exit">Выйти</string>
    <string name="allow">Разрешить</string>
    <string name="profile">Профиль</string>
    <string name="dialogs">Диалоги</string>
    <string name="events">События</string>
    <string name="search">Поиск</string>
    <string name="love_is">Love is</string>
    <string name="event_is">Event is</string>
    <string name="create_event_is">Создать Event is</string>
    <string name="write_address">Укажите адрес</string>
    <string name="create_place">Создать место</string>
    <string name="create_free_event">Создать бесплатное\nмероприятие</string>
    <string name="or">или</string>
    <string name="write_event_cost">Указать стоимость брони</string>
    <string name="create_love_is">Создать Love is</string>
    <string name="edit">Редактировать</string>

    <string name="menu">Меню</string>
    <string name="video">Видео</string>
    <string name="premium">Премиум</string>
    <string name="video_name">Название видео</string>
    <string name="tech_support2">Техподдержка</string>
    <string name="verification">Верификация</string>
    <string name="server_error">Технические неполадки\nпожалуйста попробуйте\nпозже</string>
    <string name="defense">   и защищаем</string>
    <string name="apply">Принять</string>
    <string name="verified_user">Проверенный пользователь</string>
    <string name="info_withdrawal_to_card">С возможностью дальнейшего вывода на карту</string>
    <string name="telegram_example">Пример: https://t.me/+ZxxxxP7hXbg1OGUy</string>
    <string name="whatsapp_example">Пример: chat.whatsapp.com/ECBQlwGRuJlD9zwFxxxxx</string>
    <string name="available_to_you">Вам доступно</string>
    <string name="_0_32">0/32</string>

</resources>