<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <TextView
        android:id="@+id/walletTextView"
        android:textAppearance="@style/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="40dp"
        android:text="@string/wallet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/videoTextView"
        android:textAppearance="@style/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/videos"
        android:textColor="@color/pink"
        app:layout_constraintStart_toStartOf="@+id/walletTextView"
        app:layout_constraintTop_toBottomOf="@+id/walletTextView" />

    <TextView
        android:id="@+id/techSupportTextView"
        android:textAppearance="@style/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tech_support"
        app:layout_constraintStart_toStartOf="@+id/videoTextView"
        app:layout_constraintTop_toBottomOf="@+id/videoTextView" />

    <TextView
        android:id="@+id/changePhoneTextView"
        android:textAppearance="@style/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/change_phone"
        app:layout_constraintStart_toStartOf="@+id/techSupportTextView"
        app:layout_constraintTop_toBottomOf="@+id/techSupportTextView" />

    <TextView
        android:id="@+id/moreFuturesTextView"
        android:textAppearance="@style/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/more_futures"
        android:textColor="@color/pink"
        app:layout_constraintStart_toStartOf="@+id/changePhoneTextView"
        app:layout_constraintTop_toBottomOf="@+id/changePhoneTextView" />

    <TextView
        android:id="@+id/aboutAppTextView"
        android:textAppearance="@style/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/about_app"
        app:layout_constraintStart_toStartOf="@+id/moreFuturesTextView"
        app:layout_constraintTop_toBottomOf="@+id/moreFuturesTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>