<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:lineSpacingExtra="1sp"
        android:text="@string/registrationText"
        android:textAppearance="@style/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/stepTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="1dp"
        android:fontFamily="sans-serif"
        android:gravity="bottom"
        android:text="@string/step"
        android:textColor="?attr/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/stepTextView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationTextView" />

    <TextView
        android:id="@+id/stepTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:fontFamily="sans-serif"
        android:gravity="bottom"
        android:text="@string/_4"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/stepTextView1"
        app:layout_constraintEnd_toStartOf="@+id/stepTextView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/stepTextView1" />

    <TextView
        android:id="@+id/stepTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:fontFamily="sans-serif"
        android:gravity="bottom"
        android:text="@string/of"
        android:textColor="?attr/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/stepTextView2"
        app:layout_constraintEnd_toStartOf="@+id/stepTextView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/stepTextView2" />

    <TextView
        android:id="@+id/stepTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:fontFamily="sans-serif"
        android:gravity="bottom"
        android:text="@string/_5"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/stepTextView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/stepTextView3" />


    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/birth_date"
        android:textAppearance="@style/infoText"
        app:layout_constraintBottom_toTopOf="@+id/dayEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/dayEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"

        style="@style/InputStyle"
        android:drawableBottom="@drawable/ic_line_2"
        android:hint="@string/day_hint"
        android:textAlignment="center"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
        app:layout_constraintEnd_toStartOf="@+id/monthEditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationTextView"
        app:mask="##"
         />

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/monthEditText"
        style="@style/InputStyle"
        android:drawableBottom="@drawable/ic_line_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:hint="@string/month_hint"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/yearEditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dayEditText"
        app:layout_constraintTop_toTopOf="@+id/dayEditText"
        app:mask="##" />

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/yearEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/InputStyle"
        android:drawableBottom="@drawable/ic_line_3"
        android:hint="@string/year_hint"
        android:inputType="number"
        app:mask="####"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/monthEditText"
        app:layout_constraintTop_toTopOf="@+id/monthEditText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueBtn"
        style="@style/buttonFilled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/filled_button"
        android:text="@string/next"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>